fix heading overlap with scroll bar

--- a/SRC/css/layout/header.css
+++ b/SRC/css/layout/header.css
@@ -9,7 +9,7 @@ body > header {
   top: 0;
   z-index: var(--z-sticky);
   background-color: var(--c-canvas-bg);
-  box-shadow: 0px 0px 5px 5px var(--c-canvas-bg);
+  box-shadow: 0px 5px 5px var(--c-canvas-bg);
 }
 
 title-bar {
